base64 key decode

--- a/docs/.env
+++ b/docs/.env
@@ -1,5 +1,8 @@
 # .env
+
+# APP_DRIVE 0:local 1:s3 2:oss
 APP_PORT=8080
 APP_DRIVE=0
 
-USE_DB_INDEX=true
+# Use DB for advanced features
+DB_DRIVE=no
