--- a/docs/.env
+++ b/docs/.env
@@ -4,5 +4,14 @@
 APP_PORT=8080
 APP_DRIVE=0
 
-# Use DB for advanced features
-DB_DRIVE=no
+# AWS
+AWS_ACCESS_ID=
+AWS_ACCESS_KEY=
+AWS_REGION=
+AWS_S3_BUCKET=
+
+# ALIYUN
+ALI_ACCESS_ID=
+ALI_ACCESS_KEY=
+ALI_ENDPOINT=
+ALI_OSS_BUCKET=
