--- a/docs/.env
+++ b/docs/.env
@@ -4,6 +4,13 @@
 APP_PORT=8080
 APP_DRIVE=0
 
+# MySql
+MYSQL_HOST=
+MYSQL_PORT=
+MYSQL_USER=
+MYSQL_PASS=
+MYSQL_NAME=
+
 # AWS
 AWS_ACCESS_ID=
 AWS_ACCESS_KEY=
